doc scan component initial rendering

--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,15 @@
   width: 90px; 
   height: auto;
 }
+
+.success {
+  color: green
+}
+
+.error {
+  color: red
+}
+
+.pending {
+  color: #ff9800
+}
