doc scanning image set

--- a/src/css/scanning/doc-scan.css
+++ b/src/css/scanning/doc-scan.css
@@ -85,7 +85,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 300px;
+    width: 17rem;
     min-height: 70px;
 }
 
