--- a/src/css/service-history/service-history.css
+++ b/src/css/service-history/service-history.css
@@ -8,10 +8,24 @@
     font-size: 0.80rem;
 }
 
+.serviceImage{
+    height: 22rem;
+    width: 100%;
+}
+
+@media only screen and (max-width: 770px) {
+    .serviceImage {
+      width: 100%; 
+      height: 16.5rem;
+    }
+  }
+
 .timeDuration{
     font-weight: 400;
     font-size: 0.72rem;
     color: #757575;
+    background-color: #9B9B9B33;
+    border-radius: 0.2rem;
 }
 
 .dropdownLabel{
