--- a/src/css/scanning/doc-scan.css
+++ b/src/css/scanning/doc-scan.css
@@ -22,10 +22,20 @@
     font-weight: thin;
 }
 
-.fw-boldHeading {
+/* .fw-boldHeading {
     font-size: 1.5rem;
     font-weight: 600;
+} */
+
+.scanResultLabel{
+    font-size: 1rem;
+    font-weight: 500;
 }
+.back-arrow{
+    color: #000;
+    font-size: 0.73rem;
+    font-weight: 500;
+  }
 .subText{
     font-size: 1.24rem;
     font-weight: 300;
@@ -113,7 +123,7 @@
 
 @media only screen and (max-width: 1030px) {
     .scanResCol{
-        height: 12rem;
+        height: 10rem;
     }
     .bigger-icon {
         font-size: 6rem;
