--- a/src/css/static/uan-static.css
+++ b/src/css/static/uan-static.css
@@ -81,8 +81,8 @@
     line-height: 1.2;
 }
 
-@media (min-width: 750px) {
+/* @media (min-width: 750px) {
     .custom-col {
       height: 100vh;
     }
-  }
+  } */
