--- a/src/css/auth/otp-verification.css
+++ b/src/css/auth/otp-verification.css
@@ -1,11 +1,23 @@
 .otpAssessmentImage{
     height: 22rem;
-     width: 90% 
+     width: 100% 
+  }
+
+  .otpLabel{
+    font-size: 1rem;
+    font-weight: 400;
+    color: #000000;
   }
   
   @media only screen and (max-width: 770px) {
    .otpAssessmentImage{
      height: 16.5rem;
-     width: 90% 
+     width: 100% 
    }
   }
+
+  @media only screen and (min-width: 770px) {
+    .otpInput{
+      height: 3.5rem;
+    }
+   }
