--- a/src/css/create-account/create-account.css
+++ b/src/css/create-account/create-account.css
@@ -1,12 +1,18 @@
 .accountImage{
     height: 22rem;
-     width: 90% 
+     width: 100% 
+  }
+
+  .accountHeading{
+    font-size: 1rem;
+    font-weight: 400;
+    color: #000000;
   }
   
   @media only screen and (max-width: 770px) {
    .accountImage{
      height: 11.9rem;
-     width: 90% 
+     width: 100% 
    }
   }
 
