--- a/src/css/service-history/service-history.css
+++ b/src/css/service-history/service-history.css
@@ -49,18 +49,19 @@
 }
 
 .incorrectButton{
-    border: 1px solid !important;
-    border-color:  #2D565D !important;
-    color: #2D565D !important;
+    border: 1px solid #00124F !important;
+    color: #00124F!important;
     font-size: 1rem !important;
     font-weight: 600 !important;
+    border-radius: 2rem !important;
 }
 
 .correctButton{
-    background-color: #2D565D !important;
-    color: white !important;
     font-size: 1rem !important;
     font-weight: 600 !important;
+    color: #ffffff !important;
+    background-color: #00124F!important;
+    border-radius: 2rem !important;
 }
 
 .btn.incorrectButton:hover {
