--- a/src/App.css
+++ b/src/App.css
@@ -40,9 +40,9 @@
 }
 .setBackGround{
   background-color: #eef9ff;
-  /* height: 150vh;
+  min-height: 100vh;
   display: flex;
-  flex-direction: column; */
+  flex-direction: column; 
 }
 
 .EpfText{
