--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,13 @@
   background-color: #00124F!important;
   border-radius: 2rem !important;
 }
+
+.pfRiskButtons:disabled {
+  background-color: #d6d6d6 !important;
+  color: #000000 !important;
+  cursor: not-allowed;
+}
+
 .pfRiskheading{
   /* font-family :Roboto; */
   color: #000000;
