--- a/src/css/report/report-registation.css
+++ b/src/css/report/report-registation.css
@@ -3,3 +3,27 @@
     font-weight: 400;
     line-height: 1.2;
 }
+
+.bg-image {
+    background-image: url('./../../assets/images/report.png');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 35rem;
+    width: 100%;
+    position: relative;
+}
+
+.overlayImage {
+    background: rgba(0, 0, 0, 0.5);
+    width: 50%; 
+    height: 35rem;
+    font-size: 1.1rem;
+    font-weight: 500;
+    line-height: 1.25;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 0.5rem;
+}
+
