--- a/src/css/service-history/select-organization.css
+++ b/src/css/service-history/select-organization.css
@@ -17,7 +17,7 @@
     font-weight: 400;
     font-size: 0.72rem;
     color: #757575;
-    background-color: #9B9B9B33;
+    /* background-color: #9B9B9B33; */
     border-radius: 0.2rem;
 }
 .selectHeading{
