--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@
 .logo {
   width: 5rem; 
   height: 1.7rem;
+  margin-left:4rem;
 }
 .setBackGround{
   background-color: #eef9ff;
@@ -64,8 +65,9 @@
 }
 @media only screen and (max-width: 770px) {
   .logo {
-    width: 4rem; 
-    height: 2.5rem;
+    width: 3rem; 
+    height: 1.2rem;
+    margin-left: 0;
   }
 }
 
