--- a/src/css/report/report-registation.css
+++ b/src/css/report/report-registation.css
@@ -1,7 +1,15 @@
 .reportWhatsappText{
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 400;
     line-height: 1.2;
+}
+
+@media (max-width: 470px) {
+    .reportWhatsappText{
+        font-size: 0.87rem;
+        font-weight: 300;
+        line-height: 1.2;
+    }
 }
 
 .bg-image {
@@ -9,7 +17,7 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center;
-    height: 35rem;
+    height: 36rem;
     width: 100%;
     position: relative;
 }
@@ -17,7 +25,8 @@
 .overlayImage {
     background: rgba(0, 0, 0, 0.5);
     width: 50%; 
-    height: 35rem;
+    height: 34.8rem;
+    margin-left: 0.2rem;
     font-size: 1.1rem;
     font-weight: 500;
     line-height: 1.25;
