--- a/src/css/KYC/kyc-details.css
+++ b/src/css/KYC/kyc-details.css
@@ -1,10 +1,10 @@
 .kycLabel{
-    font-size: 0.81rem;
-    font-weight: 700;
+    font-size: 0.88rem;
+    font-weight: 600;
 }
 
 .kycValue{
-    font-size: 1.5rem;
+    font-size: 0.88rem;
     font-weight: 300;
 }
 
@@ -33,3 +33,17 @@
     align-items: center;
     justify-content: center;
   }
+ 
+  
+  .changeCheckbox:focus{
+    /* transform: scale(1.5);
+    background: #DCDCDC !important;
+    border-color: #DCDCDC !important; */
+    outline: none !important;
+    box-shadow: none !important;
+  }
+  
+  /* .custom-checkbox:focus {
+    outline: none;
+    box-shadow: none;
+  }  */
