--- a/src/css/auth/otp-verification.css
+++ b/src/css/auth/otp-verification.css
@@ -13,6 +13,17 @@
     font-size: 0.62rem;
     font-weight: 300;
   }
+
+  input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* For Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
   
   @media only screen and (max-width: 770px) {
    .otpAssessmentImage{
