--- a/src/css/report/account-summary.css
+++ b/src/css/report/account-summary.css
@@ -44,8 +44,8 @@
 .refreshBtn {
   display: inline-block; 
   background-color: white;
-  border-radius: 20px; 
-  padding: 0 10px;
+  border-radius: 1rem; 
+  padding: 0 1.5rem;
   color: #000; 
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
@@ -102,12 +102,13 @@ h5 {
 }
 
 .download-sample-btn {
-  padding: 0.4rem 1rem;
-  border-radius: 20px;
+  padding: 0.4rem 0.8rem;
+  border-radius: 1.25rem;
   background-color: #04184a;
   color: #fff;
   font-weight: 500;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
+  cursor: pointer;
 }
 
 .coming-soon {
