--- a/src/css/report/account-summary.css
+++ b/src/css/report/account-summary.css
@@ -23,15 +23,15 @@
 
 .reportValueTextSub {
   font-weight: 500;
-  font-size: 0.7rem;
+  font-size: 0.9rem;
   line-height: 1;
   margin-bottom: 0px;
 }
 
 .reportValueAmountSub {
-  font-weight: 800;
+  font-weight: 700;
   margin-top: 0;
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 
 .updatedDate {
@@ -104,8 +104,8 @@ h5 {
 .download-sample-btn {
   padding: 0.8rem 0.8rem;
   border-radius: 2rem;
-  background-color: #27DEBF;
-  color: #000;
+  background-color: #04184a;
+  color: #fff;
   font-weight: 400;
   font-size: 1.25rem;
   cursor: pointer;
