--- a/src/css/common/side-content.css
+++ b/src/css/common/side-content.css
@@ -1,9 +1,9 @@
 
 .securityText{
     font-weight: 400;
-    font-size: 0.65rem;
+    font-size: 0.80rem;
     color: #078960;
-    background-color: #41BF9733;
+    background-color: #fff;
     border-radius: 2rem;
   }
   .dataImage{
