--- a/src/css/summary/total-summary.css
+++ b/src/css/summary/total-summary.css
@@ -8,7 +8,7 @@
     border-radius: 1rem;
     font-size: 0.80rem;
     font-weight: 700;
-    padding-left: 0.75rem;
+    padding: 0 0.75rem;
     border: none;
 }
 .rejection-card{
