--- a/src/App.css
+++ b/src/App.css
@@ -135,6 +135,10 @@
   font-weight: bold;
 }
 
+.text-warning-custom {
+  color: #F56905!important
+}
+
 @media only screen and (max-width: 770px) {
   .pfRiskAssessmentImage{
     height: 16.5rem;
