--- a/src/css/summary/pf-balance-analysis.css
+++ b/src/css/summary/pf-balance-analysis.css
@@ -17,11 +17,11 @@
     position: relative;
 }
 .pfAmountAnalysis{
-    font-size: 0.7rem;
+    font-size: 1rem;
     font-weight: 500;
 }
 .pfTextanalysis{
-    font-size: 0.6rem;
+    font-size: 0.9rem;
     font-weight: 400;
 }
 .withdrawalLimit{
@@ -39,8 +39,8 @@
 .blockAmountText{
     background-color: #F9F9F9;
     height: 3rem;
-    width: 60%;
-    position: relative;
+    /* width: 60%; */
+    /* position: relative; */
 }
 .pfTabelheading{
     font-size: 0.63rem !important;
