--- a/src/css/KYC/kyc-details.css
+++ b/src/css/KYC/kyc-details.css
@@ -12,6 +12,7 @@
     box-shadow: 0 4px 8px rgba(50, 50, 50, 0.5);
     border: none;
   }
+
   
   .card-bottom-shadow:hover {
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
@@ -43,7 +44,8 @@
     box-shadow: none !important;
   }
   
-  /* .custom-checkbox:focus {
-    outline: none;
-    box-shadow: none;
-  }  */
+  .kycHeading{
+    font-size: 2.3rem;
+    font-weight: 600;
+    line-height: 1.1;
+}
