--- a/src/css/scanning/doc-scan.css
+++ b/src/css/scanning/doc-scan.css
@@ -107,7 +107,7 @@
 }
 
 .tasks {
-    display: grid;
+    /* display: grid; */
     grid-template-columns: 1fr 1fr;
     gap: 0.7rem;
     margin-top: 1.25rem;
@@ -118,11 +118,11 @@
     border: 1px solid #ddd;
     border-radius: 0.5rem;
     padding: 1rem;
-    /* display: flex; */
-    /* justify-content: space-between; */
-    /* align-items: center; */
-    /* width: 18rem; */
-    /* min-height: 70px; */
+}
+.docScanfHeading{
+    font-size: 2.3rem;
+    font-weight: 600;
+    text-align: center;
 }
 
 @media only screen and (max-width: 700px) {
