--- a/src/css/KYC/kyc-details.css
+++ b/src/css/KYC/kyc-details.css
@@ -49,3 +49,9 @@
     font-weight: 600;
     line-height: 1.1;
 }
+@media only screen and (max-width: 500px) {
+  .kycHeading{
+    font-size: 1.5rem;
+    font-weight: 500; 
+  }
+}
