--- a/src/css/scanning/doc-scan.css
+++ b/src/css/scanning/doc-scan.css
@@ -153,3 +153,9 @@
     font-size: 0.8rem;
     margin-left: 1rem;
 }
+@media only screen and (max-width: 500px) {
+    .docScanfHeading{
+      font-size: 1.5rem;
+      font-weight: 500; 
+    }
+  }
