--- a/src/css/service-history/service-history.css
+++ b/src/css/service-history/service-history.css
@@ -81,6 +81,14 @@
     font-weight: 600;
     text-align: center;
 }
+@media only screen and (max-width: 500px) {
+    .confirmHistory{
+      color: #000000;
+      font-size: 1.5rem;
+      font-weight: 500; 
+    }
+  }
+
 .capturedCorrect{
     font-size: 1rem;
     font-weight: 400;
