--- a/src/App.css
+++ b/src/App.css
@@ -139,6 +139,30 @@
   color: #F56905!important
 }
 
+.blur-container {
+  position: relative;
+  width: 100%;
+  border-radius: 0.4rem;
+  overflow: hidden;
+  /* background: #f9f9f9; */
+}
+
+/* Blurred content styling */
+.blur-content {
+  filter: blur(3px);
+  pointer-events: none;
+  color: #333;
+}
+
+/* Center the button on top */
+.center-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
 @media only screen and (max-width: 770px) {
   .pfRiskAssessmentImage{
     height: 16.5rem;
