--- a/src/css/auth/login.css
+++ b/src/css/auth/login.css
@@ -56,6 +56,58 @@ input.form-control::placeholder {
   margin-top: 5rem !important;
 }
 
+/* .loader-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; 
+} */
+
+.loader-container {
+  text-align: center;
+}
+
+.loader {
+  position: relative;
+  width: 100px;
+  height: 100px;
+}
+
+.loader-image {
+  width: 100%;
+  height: auto;
+  animation: spin 2s linear infinite;
+}
+
+.progress-ring {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 5px solid transparent;
+  border-top: 5px solid #304DFF;
+  border-radius: 50%;
+  animation: spin 5s linear infinite;
+}
+
+@keyframes spin {
+  from {
+      transform: rotate(0deg);
+  }
+  to {
+      transform: rotate(360deg);
+  }
+}
+
+
+
 @media only screen and (max-width: 500px) {
   .termCondition{
     color: #000000;
