--- a/src/css/auth/login.css
+++ b/src/css/auth/login.css
@@ -106,7 +106,9 @@ input.form-control::placeholder {
   }
 }
 
-
+.gradient-footer {
+  background:linear-gradient(15deg, #00124F,#001a6d)
+}
 
 @media only screen and (max-width: 500px) {
   .termCondition{
